--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -44,17 +44,7 @@
         </LinearLayout>
     </ScrollView>
 
-    <TextView
-        android:id="@+id/itemcount"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="35dp"
-        android:layout_marginBottom="18dp"
-        android:textColor="@color/red"
-        android:textSize="12sp"
-        android:textStyle="bold" />
+
 
     <!--    <RelativeLayout-->
     <!--        android:layout_width="match_parent"-->
@@ -170,38 +160,26 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <TextView
+        android:id="@+id/itemcount"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/red"
+        android:text="85"
+        android:textSize="12sp"
+        android:textStyle="bold" />
     <include
         android:id="@+id/bottom_navigation"
         layout="@layout/bottom_nav_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true" />
     <!--    </RelativeLayout>-->
 
 </RelativeLayout>
 
-    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-    <!--    xmlns:tools="http://schemas.android.com/tools"-->
-    <!--    android:layout_width="match_parent"-->
-    <!--    android:layout_height="match_parent"-->
-    <!--    android:background="@color/white"-->
-    <!--    android:orientation="vertical"-->
-    <!--    tools:context=".Activities.HomeActivity">-->
-
-    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"-->
-    <!--        android:layout_weight="11.4"-->
-    <!--        android:background="@color/white"-->
-    <!--        android:orientation="horizontal"-->
-    <!--        android:padding="3dp"-->
-    <!--        android:paddingTop="4dp">-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:layout_alignParentBottom="true"-->
-    <!--        android:layout_centerHorizontal="true" />-->
-
-
-    <!--</RelativeLayout>-->
