--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -44,18 +44,6 @@
         </LinearLayout>
     </ScrollView>
 
-    <TextView
-        android:id="@+id/itemcount"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="35dp"
-        android:layout_marginBottom="18dp"
-        android:textColor="@color/red"
-        android:textSize="12sp"
-        android:textStyle="bold" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/filtersLayout"
         android:layout_width="match_parent"
@@ -97,6 +85,24 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/itemcount"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="90dp"
+        android:layout_marginBottom="18dp"
+        android:textColor="@color/red"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:text="0"
+        android:translationZ="90dp"
+        android:layout_alignTop="@+id/bottom_navigation"
+        android:gravity="center"
+        android:visibility="gone"
+        />
 
     <include
         android:id="@+id/bottom_navigation"
