--- a/app/src/main/res/layout/activity_show_previous_order.xml
+++ b/app/src/main/res/layout/activity_show_previous_order.xml
@@ -19,16 +19,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="6"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:orientation="vertical"
         android:padding="2dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_weight="7"
             android:orientation="horizontal">
 
             <TextView
@@ -36,6 +35,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="2"
+                android:gravity="start|center_vertical"
                 android:padding="4dp"
                 android:text="@string/VoHNO"
                 android:textColor="@color/primaryTextColor"
@@ -60,17 +60,16 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_weight="7"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginVertical="10dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="2"
-                android:gravity="center|left"
+                android:gravity="start|center_vertical"
                 android:padding="4dp"
                 android:text="@string/customerName"
                 android:textColor="@color/primaryTextColor"
@@ -84,7 +83,6 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:inputType="date"
                 android:textColor="@color/black"
                 android:textSize="12sp" />
 
@@ -95,7 +93,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:layout_weight="1"
             android:orientation="horizontal">
 
             <TextView
@@ -103,7 +100,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
-
+                android:gravity="start|center_vertical"
                 android:padding="4dp"
                 android:text="@string/date"
                 android:textColor="@color/primaryTextColor"
@@ -151,7 +148,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="7dp"
+        android:layout_height="5dp"
         android:layout_marginLeft="70dp"
         android:layout_marginRight="70dp"
         android:background="@color/primaryTextColor" />
@@ -169,7 +166,7 @@
         android:id="@+id/ordersRec"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2" />
+        android:layout_weight="1" />
 
     <include
         android:id="@+id/bottom_navigation"
