--- a/app/src/main/res/layout/pre_order_row.xml
+++ b/app/src/main/res/layout/pre_order_row.xml
@@ -31,35 +31,33 @@
             android:textColor="@color/primaryTextColor"
             android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/orderstate"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+<!--        <TextView-->
+<!--            android:id="@+id/orderstate"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
 
-            android:layout_weight="2"
-            android:padding="3dp"
-            android:textColor="@color/primaryTextColor"
-            android:textSize="18sp" />
+<!--            android:layout_weight="2"-->
+<!--            android:padding="3dp"-->
+<!--            android:textColor="@color/primaryTextColor"-->
+<!--            android:textSize="18sp" />-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="2.6"
-            android:gravity="center"
-            >
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="2.6"-->
+<!--            android:gravity="center"-->
+<!--            >-->
 
-        <TextView
-            android:id="@+id/show"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_baseline_arrow_drop_down_circle_24"
-            android:textColor="@color/primaryTextColor"
-             />
+<!--        <TextView-->
+<!--            android:id="@+id/show"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@drawable/ic_baseline_arrow_drop_down_circle_24"-->
+<!--            android:textColor="@color/primaryTextColor"-->
+<!--             />-->
 
-        </LinearLayout>
-            android:textSize="18sp"
-            android:id="@+id/cusNO"
-            />
+<!--        </LinearLayout>-->
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
