--- a/app/src/main/res/layout/orders_basket.xml
+++ b/app/src/main/res/layout/orders_basket.xml
@@ -32,6 +32,7 @@
                 <ImageView
                     android:id="@+id/logo_remove"
                     android:layout_width="74dp"
+                    android:contentDescription=""
                     android:layout_height="62dp"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
@@ -141,16 +142,6 @@
                                 android:orientation="horizontal">
 
 
-                                <TextView
-                                    android:layout_width="150dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:fontFamily="@font/alegreya"
-                                    android:gravity="start"
-                                    android:lineHeight="19sp"
-                                    android:text="@string/item_Name_"
-                                    android:textColor="@color/primaryTextColor"
-                                    android:textSize="14sp" />
                         <TextView
                             android:layout_width="150dp"
                             android:layout_height="wrap_content"
@@ -162,16 +153,7 @@
                             android:textColor="@color/primaryTextColor"
                             android:textSize="14sp" />
 
-                                <TextView
-                                    android:layout_width="150dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:fontFamily="@font/alegreya"
-                                    android:gravity="center"
-                                    android:lineHeight="19sp"
-                                    android:text="@string/item_Code"
-                                    android:textColor="@color/primaryTextColor"
-                                    android:textSize="14sp" />
+
                         <TextView
                             android:layout_width="150dp"
                             android:layout_height="wrap_content"
@@ -194,16 +176,7 @@
                             android:text="@string/qty"
                             android:textColor="@color/primaryTextColor"
                             android:textSize="14sp" />
-                                <TextView
-                                    android:layout_width="150dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:fontFamily="@font/alegreya"
-                                    android:gravity="center"
-                                    android:lineHeight="19sp"
-                                    android:text="@string/qty"
-                                    android:textColor="@color/primaryTextColor"
-                                    android:textSize="14sp" />
+
 
                                 <TextView
                                     android:layout_width="150dp"
@@ -215,16 +188,7 @@
                                     android:text="@string/price_"
                                     android:textColor="@color/primaryTextColor"
                                     android:textSize="14sp" />
-                        <TextView
-                            android:layout_width="150dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:fontFamily="@font/alegreya"
-                            android:gravity="center"
-                            android:lineHeight="19sp"
-                            android:text="@string/price_"
-                            android:textColor="@color/primaryTextColor"
-                            android:textSize="14sp" />
+
 
                         <TextView
                             android:layout_width="150dp"
@@ -236,16 +200,7 @@
                             android:text="@string/discount_"
                             android:textColor="@color/primaryTextColor"
                             android:textSize="14sp" />
-                                <TextView
-                                    android:layout_width="150dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:fontFamily="@font/alegreya"
-                                    android:gravity="center"
-                                    android:lineHeight="19sp"
-                                    android:text="@string/discount_"
-                                    android:textColor="@color/primaryTextColor"
-                                    android:textSize="14sp" />
+
 
                         <TextView
                             android:layout_width="150dp"
@@ -257,16 +212,6 @@
                             android:text="@string/tax_"
                             android:textColor="@color/primaryTextColor"
                             android:textSize="14sp" />
-                                <TextView
-                                    android:layout_width="150dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:fontFamily="@font/alegreya"
-                                    android:gravity="end"
-                                    android:lineHeight="19sp"
-                                    android:text="@string/tax_"
-                                    android:textColor="@color/primaryTextColor"
-                                    android:textSize="14sp" />
 
 
                             </LinearLayout>
