--- a/app/src/main/res/layout/orders_basket.xml
+++ b/app/src/main/res/layout/orders_basket.xml
@@ -71,29 +71,30 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                 android:layout_marginTop="8dp"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/basketListCard"
-                    android:layout_height="wrap_content">
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:layout_height="match_parent"
                         android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/total_"
                         android:textColor="@color/primaryTextColor"
                         android:textSize="18sp"
-                        android:gravity="center"
-                        android:textStyle="bold"
-                        android:layout_weight="1"
-                        android:text="@string/total_"/>
+                        android:textStyle="bold" />
+
                     <TextView
-                        android:layout_height="match_parent"
+                        android:id="@+id/total"
                         android:layout_width="match_parent"
-                        android:textColor="@color/amountColor"
-                        android:textSize="18sp"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="0.0"
                         android:gravity="center"
-                        android:id="@+id/total"/>
+                        android:text="0.0"
+                        android:textColor="@color/amountColor"
+                        android:textSize="18sp" />
                 </LinearLayout>
 
 
@@ -142,7 +143,7 @@
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/basketListCard"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_below="@+id/customer_textInput"
                     android:layout_centerHorizontal="true"
                     android:layout_marginHorizontal="26dp"
@@ -158,15 +159,17 @@
                         android:orientation="vertical">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:orientation="vertical"
-                            android:padding="23dp">
+                            >
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal">
+                                android:orientation="horizontal"
+                                android:layout_marginHorizontal="23dp"
+                                android:layout_marginTop="23dp">
 
 
                                 <TextView
@@ -250,16 +253,17 @@
                                     android:text="@string/area_"
                                     android:textColor="@color/primaryTextColor"
                                     android:textSize="14sp" />
+
                                 <TextView
                                     android:layout_width="20dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
+                                    android:background="@drawable/ic_baseline_remove_circle_24"
                                     android:fontFamily="@font/alegreya"
                                     android:gravity="center"
                                     android:lineHeight="19sp"
-                                  android:background="@drawable/ic_baseline_remove_circle_24"
-                                   android:visibility="invisible"
-                                    android:textSize="14sp" />
+                                    android:textSize="14sp"
+                                    android:visibility="invisible" />
 
 
                             </LinearLayout>
@@ -268,13 +272,18 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="1dp"
                                 android:layout_marginTop="11dp"
-                                android:background="@color/primaryTextColor" />
+                                android:background="@color/primaryTextColor"
+                                android:layout_marginHorizontal="23dp"
+                                />
 
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/basketListRV"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                                android:layout_marginHorizontal="23dp"
+                                android:layout_marginBottom="23dp"
+                                />
 
                         </LinearLayout>
                     </HorizontalScrollView>
@@ -289,8 +298,8 @@
                     android:layout_alignParentTop="true"
                     android:layout_marginLeft="26dp"
                     android:layout_marginTop="10dp"
-                    app:cardCornerRadius="10dp"
                     android:visibility="invisible"
+                    app:cardCornerRadius="10dp"
                     app:cardElevation="5dp">
 
                     <ImageButton
